Wishlist mobile collapse snap fix

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -222,6 +222,12 @@ textarea {
   }
 }
 
+.slick-list {
+  @include mobile {
+    overflow: visible;
+  }
+}
+
 // input disabled styles
 
 .form-control:disabled, .form-control[readonly] {
